--- a/amm.css
+++ b/amm.css
@@ -20,9 +20,21 @@ html{
   float: left;
   text-align: center;
 }
+.halfFold h2{
+  font-size: 2.0em;
+}
 .halfFold h3{
   padding-left: 10%;
   padding-right: 10%;
+}
+.halfFold ul{
+  font-family: "Roboto", sans-serif;
+  font-size: 1.5em;
+  padding-left: 30%;
+  padding-right: 20%;
+}
+.halfFold a{
+  font-family: "Roboto", sans-serif;
 }
 .wideBar{
   padding-top: 30px;
@@ -132,10 +144,14 @@ body{
 #linkBar{
   position: relative;
   top: 55px;
-  left: 3.5%;
+  left: 2.5%;
+  /*border: 1px solid black;*/
+  width: 90%;
+  text-align: left;
+  float: none;
 }
 .navBarLink{
-  margin-left: 3%;
+  margin-left: 2%;
   text-shadow: 0px 1px 2px rgba(40,40,40,0.5);
 }
 #wideImage{
@@ -152,7 +168,7 @@ body{
   border: 1px solid rgba(100,100,100,0.3);
   border-style: solid none solid none;
 }
-#testimonials, #team{
+#testimonials, #team, #about{
   background-color: rgba(128, 191, 255, 0.6);
   /*border: 1px solid black;*/
 }
