--- a/amm.css
+++ b/amm.css
@@ -98,11 +98,12 @@ body{
 }
 #navBar {
   position: fixed;
+  text-align: left;
   z-index: 1;
   top: -1px;
   left: -1px;
   width: 100.81%;
-  height: 150px;
+  height: 160px;
   background-color: rgba(102, 204, 255, 0.9);
   box-shadow: 0px 2px 5px rgba(60, 60, 60, 0.4);
 }
@@ -111,7 +112,8 @@ body{
   float: left;
   top: 15px;
   left: 20px;
-  height: 100%;
+
+  max-width: 5%;
 }
 #navBarTitle{
   font-size: 2.0em;
@@ -129,7 +131,7 @@ body{
   float: right;
   right: 40px;
   top: -40px;
-  width: 20%;
+  width: 25%;
   text-align: right;
 }
 #callNow h2{
@@ -142,16 +144,21 @@ body{
   font-size: 1.2em;
 }
 #linkBar{
+  display: block;
   position: relative;
-  top: 55px;
-  left: 2.5%;
+  /*top: 55px;
+  left: 3%;*/
+  margin: auto;
+  top: 50%;
+  left: 48%;
+  transform: translate(-50%,-50%);
   /*border: 1px solid black;*/
   width: 90%;
   text-align: left;
   float: none;
 }
 .navBarLink{
-  margin-left: 2%;
+  margin-left: 1%;
   text-shadow: 0px 1px 2px rgba(40,40,40,0.5);
 }
 #wideImage{
