--- a/ammMobile.css
+++ b/ammMobile.css
@@ -28,8 +28,8 @@ html{
 .halfFold ul{
   font-family: "Roboto", sans-serif;
   font-size: 1.5em;
-  padding-left: 30%;
-  padding-right: 20%;
+  padding-left: 15%;
+  padding-right: 10%;
 }
 .halfFold a{
   font-family: "Roboto", sans-serif;
@@ -41,7 +41,7 @@ html{
   display: block;
   text-align: center;
   min-height: 100px;
-  width: 101.8%;
+  width: 102.2%;
   box-shadow: 0px 3px 2px rgba(100, 100, 100, 0.3);
   /*border: 1px solid black;*/
   overflow: auto;
@@ -53,8 +53,9 @@ html{
 .box{
   display: table;
   float: left;
-  margin-top: 10px;
-  width: 100%;
+  margin-top: 5px;
+  margin-left: 2px;
+  width: 98%;
   height: 450px;
   vertical-align: middle;
   box-shadow: 1px 1px 4px 2px rgba(0,0,0, 0.3);
@@ -152,7 +153,7 @@ body{
   transform: translate(-50%,-50%);
   /*border: 1px solid black;*/
   width: 90%;
-  text-align: left;
+  text-align: center;
   float: none;
 }
 .navBarLink{
