--- a/amm.css
+++ b/amm.css
@@ -104,7 +104,7 @@ body{
   left: -1px;
   width: 100.81%;
   height: 160px;
-  background-color: rgba(102, 204, 255, 0.9);
+  background-color: rgba(102, 204, 255, 0.95);
   box-shadow: 0px 2px 5px rgba(60, 60, 60, 0.4);
 }
 #navBarLogo {
@@ -130,7 +130,7 @@ body{
   position: relative;
   float: right;
   right: 40px;
-  top: -40px;
+  top: -30px;
   width: 25%;
   text-align: right;
 }
@@ -149,13 +149,17 @@ body{
   /*top: 55px;
   left: 3%;*/
   margin: auto;
-  top: 50%;
+  top: 45%;
   left: 48%;
+  z-index: 2;
   transform: translate(-50%,-50%);
   /*border: 1px solid black;*/
   width: 90%;
   text-align: left;
   float: none;
+}
+#linkBar a{
+  font-size: 28px;
 }
 .navBarLink{
   margin-left: 1%;
